adds a user repository component

--- a/src/app/components/github-user/github-user.component.html
+++ b/src/app/components/github-user/github-user.component.html
@@ -5,13 +5,13 @@
 
 <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Profile</a>
+      <a class="nav-link active" routerLink = 'profile'>Profile</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Repositories</a>
+      <a class="nav-link" href="#" routerLink = 'repos'>Repositories</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link" href="#">Followers</a>
     </li>
 </ul>
 
