--- a/src/app/components/user-repos/user-repos.component.html
+++ b/src/app/components/user-repos/user-repos.component.html
@@ -1,1 +1,8 @@
-<p>user-repos works!</p>
+<div *ngFor="let repo of repos" class="card w-75">
+    <div class="card-body">
+        <h5 class="card-title">{{repo.name}}</h5>
+        <p class="card-text">{{repo.description}}</p>
+        <a href="#" class="btn btn-primary">Button</a>
+    </div>
+</div>
+  
