--- a/src/app/components/github-user/github-user.component.html
+++ b/src/app/components/github-user/github-user.component.html
@@ -13,7 +13,7 @@
       <a class="nav-link" routerLink = 'repos' routerLinkActive = 'active' >Repositories</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link"  routerLinkActive = 'active'>Followers</a>
+      <a class="nav-link" routerLink = 'followers' routerLinkActive = 'active'>Followers</a>
     </li>
 </ul>
 
