--- a/src/app/components/user-repos/user-repos.component.html
+++ b/src/app/components/user-repos/user-repos.component.html
@@ -1,7 +1,7 @@
-<div *ngFor="let repo of repos" class="card repo-card w-75 p-3">
+<div *ngFor="let repo of repos" class="card repo-card w-75 p-3 my-3">
     <div class="repo-header">
         <h4>{{repo.name}}</h4>
-        <span>updated: {{repo.updated_at |amTimeAgo }}</span>
+        <span class="updated">updated: {{repo.updated_at |amTimeAgo }}</span>
     </div>
     <div class="repo-desc">{{repo.description}}</div>
     <div class="repo-footer">
