--- a/src/app/components/repo-card/repo-card.component.css
+++ b/src/app/components/repo-card/repo-card.component.css
@@ -1,4 +1,4 @@
-/* .repo-card{
+.repo-card{
     display:flex;
     flex-direction: column;
     min-height:150px;
@@ -15,4 +15,4 @@
 }
 .updated{
     font-size: small;
-} */
+}
