--- a/src/app/components/repo-card/repo-card.component.html
+++ b/src/app/components/repo-card/repo-card.component.html
@@ -6,6 +6,7 @@
     <div class="repo-desc">{{repo.description}}</div>
     <div class="repo-footer">
         <span>Language: {{repo.language}}</span>
+        <span>forks: {{repo.forks}}</span>
         <span>Created: {{repo.created_at | amDateFormat:'LL'}}</span>
     </div>
 </div>
