tweaks homepage styling, removes search box border, removes unused rxjs operators and adds github api_key to environment file

--- a/src/app/components/github-user/github-user.component.css
+++ b/src/app/components/github-user/github-user.component.css
@@ -23,9 +23,15 @@ hr{
 .account-details{
     display:flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 .account-details > div{
     margin-left:20px;
+}
+.search{
+    border-top: none;
+    border-right: none;
+    border-left: none;
 }
 
 @media(max-width:768px){
