--- a/src/app/components/repo-card/repo-card.component.html
+++ b/src/app/components/repo-card/repo-card.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let repo of repos" class="card repo-card w-75 p-3 my-3">
+<div *ngFor="let repo of repos" class="card repo-card w-75 p-3 my-3 mx-auto">
     <div class="repo-header">
         <h4>{{repo.name}}</h4>
         <span class="updated">updated: {{repo.updated_at |amTimeAgo }}</span>
@@ -10,3 +10,4 @@
         <span>Created: {{repo.created_at | amDateFormat:'LL'}}</span>
     </div>
 </div>
+
