--- a/src/app/components/user-followers/user-followers.component.html
+++ b/src/app/components/user-followers/user-followers.component.html
@@ -1,4 +1,4 @@
-<div class="followers-card my-3 w-75" *ngFor="let follower of followers">
+<div class="followers-card my-3 w-75 mx-auto" *ngFor="let follower of followers">
     <div class="avatar">
         <img [src]="follower.avatar_url" alt="follower img" class="rounded">
     </div>
