adds a bio for the user in display, adds a navbar brand

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<nav id="navbar-example3" class="navbar navbar-light bg-light">
+  <p class="navbar-brand mx-5 my-1">Github search</p>
+</nav>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
