--- a/src/app/components/github-user/github-user.component.html
+++ b/src/app/components/github-user/github-user.component.html
@@ -13,6 +13,9 @@
             <img [src]='user.avatar_url' class="img-fluid" alt="user_avatar">
             <p class='m-3'><span class="username"></span>{{user.login}}</p>
         </div>
+        <div class="text-center">
+            {{user.bio}}
+        </div>
         <hr>
         <div class="account-details">
             <div>
