--- a/src/app/components/github-user/github-user.component.html
+++ b/src/app/components/github-user/github-user.component.html
@@ -11,10 +11,12 @@
     <div class="profile">
         <div class="personal-details">
             <img [src]='user.avatar_url' class="img-fluid" alt="user_avatar">
-            <p class='m-3'><span class="username"></span>{{user.login}}</p>
-        </div>
-        <div class="text-center">
-            {{user.bio}}
+            <div>
+                <p class='m-3'><span class="username">{{user.login}}</span></p>
+                <div class="mx-3 bio">
+                    {{user.bio}}
+                </div>
+            </div>
         </div>
         <hr>
         <div class="account-details">
