--- a/src/app/components/github-user/github-user.component.html
+++ b/src/app/components/github-user/github-user.component.html
@@ -40,10 +40,10 @@
     </div>
     <ul class="nav nav-tabs mt-3">
         <li class="nav-item">
-            <a class="nav-link" routerLink = 'repos' [state]="{data:{'username':username}}" routerLinkActive = 'active' >Repositories</a>
+            <a class="nav-link" routerLink = 'repos' routerLinkActive = 'active' >Repositories</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink = 'followers' [state]="{data:{'username':username}}" routerLinkActive = 'active'>Followers</a>
+            <a class="nav-link" routerLink = 'followers'  routerLinkActive = 'active'>Followers</a>
         </li>
     </ul>
     <router-outlet></router-outlet>
